--- a/Movie_web_app/templates/index.html
+++ b/Movie_web_app/templates/index.html
@@ -1,20 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - MovieWeb App</title>
-</head>
-<body>
-    <header>
-        <h1>Welcome to the MovieWeb App</h1>
-    </header>
+{% extends "base.html" %}
 
-    <nav>
-        <ul>
-            <li><a href="/users">Users List</a></li>
-            <li><a href="/add_user">Add User</a></li>
-        </ul>
-    </nav>
-</body>
-</html>
+{% block title %}MoviWeb | Home{% endblock %}
+
+{% block content %}
+<div class="home-container text-center text-white d-flex flex-column justify-content-center align-items-center vh-100">
+    <h1 class="mb-4">🎬 Welcome to MoviWeb!</h1>
+    <p class="lead mb-5">Your personal movie collection, now on the web.</p>
+
+    <a href="{{ url_for('choose_user', next='explore') }}" class="btn btn-primary btn-lg">Explore All Movies</a>
+    <a href="{{ url_for('choose_user', next='add') }}" class="btn btn-outline-light btn-lg mt-3">+ Add Movie</a>
+    <a href="{{ url_for('list_users') }}" class="btn btn-outline-light btn-lg mt-3">👥 Manage Users</a>
+</div>
+{% endblock %}
